<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mToolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mIVBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/actionBarItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="@dimen/_16dp"
                        android:src="@drawable/ic_back" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mMbtnCreate"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:padding="0dp"
                        android:paddingStart="@dimen/_6dp"
                        android:paddingEnd="@dimen/_6dp"
                        android:text="200"
                        android:textColor="@color/clrPrimary"
                        app:backgroundTint="@color/colorOnBackground"
                        app:cornerRadius="@dimen/_32dp"
                        app:elevation="0dp"
                        app:icon="@drawable/ic_coins"
                        app:iconTintMode="add"
                        app:iconGravity="textEnd"
                        app:iconSize="24dp"
                        app:iconTint="@android:color/transparent"
                        app:rippleColor="?colorControlHighlight"
                        app:strokeWidth="0dp" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mCardView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp"
                    android:elevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="426:310"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_main_bg" />
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_40dp"
                android:gravity="center_vertical"
                android:text="@string/startconversation"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginTop="@dimen/_6dp"
                android:layout_marginEnd="@dimen/_40dp"
                android:gravity="center_vertical"
                android:text="@string/startTxt"
                android:textColor="@color/txtClr"
                android:textSize="@dimen/_12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_40dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/mCVVideoCall"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="@dimen/_10dp"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/mCLAudioCall"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_16dp"
                            app:cardBackgroundColor="@color/colorOnBackground"
                            app:cardCornerRadius="@dimen/_30dp"
                            android:elevation="0dp"
                            app:cardElevation="4dp"
                            app:strokeColor="@color/clrPrimary"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:src="@drawable/ic_video_call" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:text="@string/videocall"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Online : 4123"
                                    android:textColor="@color/greentxt"
                                    android:textSize="@dimen/_10sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/mCLAudioCall"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/_10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/mCVVideoCall"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_16dp"
                            app:cardBackgroundColor="@color/colorOnBackground"
                            app:cardCornerRadius="@dimen/_30dp"
                            android:elevation="0dp"
                            app:cardElevation="4dp"
                            app:strokeColor="@color/clrPrimary"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:src="@drawable/ic_audio_call" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:text="@string/audiocall"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Online : 4123"
                                    android:textColor="@color/greentxt"
                                    android:textSize="@dimen/_10sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_40dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/mCVCoins"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="@dimen/_10dp"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/mCLAdvice"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_16dp"
                            android:elevation="0dp"
                            app:cardBackgroundColor="@color/colorOnBackground"
                            app:cardCornerRadius="@dimen/_30dp"
                            app:cardElevation="4dp"
                            app:strokeColor="@color/clrPrimary"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:src="@drawable/ic_coin_img" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:text="@string/coins"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/earncoin"
                                    android:textColor="@color/greentxt"
                                    android:textSize="@dimen/_10sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/mCLAdvice"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/_10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/mCVCoins"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="@dimen/_16dp"
                            app:cardBackgroundColor="@color/colorOnBackground"
                            app:cardCornerRadius="@dimen/_30dp"
                            app:cardElevation="4dp"
                            android:elevation="0dp"
                            app:strokeColor="@color/clrPrimary"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:src="@drawable/ic_advice" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_6dp"
                                    android:text="@string/advice"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:lines="1"
                                    android:text="@string/advice_txt"
                                    android:textColor="@color/greentxt"
                                    android:textSize="@dimen/_10sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>